--- a/css/style.css
+++ b/css/style.css
@@ -96,6 +96,18 @@ li {
   line-height: 1.5;
   font-size: 0.9em;
 }
+
+.references-list {
+  margin-left: 30px;
+  margin-bottom: 1.2em;
+}
+
+.references-list li {
+  margin-bottom: 0.8em;
+  text-align: left;
+  font-size: 0.9em;
+  line-height: 1.6;
+}
 /* Alerts & Callouts */
 .abstract {
   background: #f5f5f5;
